Background adjustments on different screen sizes, Added clickable links to address email and phone number.

--- a/contact.html
+++ b/contact.html
@@ -91,9 +91,9 @@
         <div class="col-md-8">
             <div class="col-12 contact-form">
             <form>
-                <label for="name">Naam:</label><br>
+                <label for="name">Uw naam:</label><br>
                 <input type="text" id="fname" name="fname"><br>
-                <label for="lname">Email:</label><br>
+                <label for="lname">Uw email:</label><br>
                 <input type="email" id="email" name="email"><br>
                 <label for="name">Korte omschrijving van uw vraag.</label><br>
                 <textarea id="message" name="message"></textarea><br><br>
@@ -110,8 +110,8 @@
                     Dekkerstraat 31<br>
                     1944VA Beverwijk<br>
                     kvk 60639393<br>
-                    kim@nomnivore.nl<br>
-                    06 - 40168572<br>
+                    <a class="email" href="mailto:kim@nomnivore.nlsubject=Contact met freelance kok Kim">kim@nomnivore.nl</a><br>
+                    <a class="phone-number" href="tel:0640168572"> Tel: 06 - 40168572</a><br>
                 </p>
             </div>
         </div>
