--- a/recepten.html
+++ b/recepten.html
@@ -51,7 +51,7 @@
     </div>
 <!-- recipe 1 -->
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-12">
         <div class="col-md-12 recipe-section">
                 <div class="col-md-12">
                 <div class="row">
@@ -117,7 +117,7 @@
             </div>
         </div>
 <!-- recipe 2 -->
-        <div class="col-lg-6">
+        <div class="col-12">
             <div class="col-md-12 recipe-section">
                 <div class="col-md-12">
                 <div class="row">
@@ -185,7 +185,7 @@
     </div>
 <!-- recipe 3 -->
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-12">
             <div class="col-md-12 recipe-section">
                 <div class="col-md-12">
                 <div class="row">
@@ -251,7 +251,7 @@
             </div>
         </div>
 <!-- recipe 4 -->
-        <div class="col-lg-6">
+        <div class="col-12">
             <div class="col-md-12 recipe-section">
                 <div class="col-md-12">
                 <div class="row">
