Replaced lorem ipsum text. Fixed recipies page layout issues. Finished browser testing.

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                         <div class="col-10 reference-titel"><h1>Culinair centrum beverwijk</h1></div>
                     </div>
                     <div class="row">
-                        <div class="col-12 reference-text"><p>Het is altijd plezierig met kim te werken.  Ze is proffesioneel prettig in de omgang en past zich snel aan. 
-                        Een echte aanvulling aan het team.</p>
+                        <div class="col-12 reference-text"><p>Het is altijd plezierig met kim te werken. Ze is proffesioneel, prettig in de omgang en past zich snel aan. 
+                        Een echte aanvulling aan het team. Wij kunnen iedereen aanraden om met Kim in zee te gaan.</p>
                         </div>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 reference-text"><p>Ik stel altijd hoge eisen, aan mijn producten en mijn personeel.
-                        Met Kim hoef ik me over beide nooit zorgen te maken.</p>
+                        Met Kim hoef ik me over beide nooit zorgen te maken. Kim is een op en top professional die zeker een aanvulling aan uw team zal zijn.</p>
                         </div>
                     </div>
                 </div>
