--- a/over-kim.html
+++ b/over-kim.html
@@ -54,9 +54,19 @@
             <div class="col-lg-8">
                 <div class="col-md-12 text-block-over-kim">
                     <h2>Over mijn ervaring en opleiding</h2>
-                    <p>Ik heb mijn patisserie opleiding gedaan in beverwijk. Donec vel justo velit. Nunc pulvinar dignissim aliquam. </p>
-                    <p>Als zelfstandig ondernemer catering bedrijf gehad. Lorem ipsum dolor sit amet, consectetur adipiscing elit.Pellentesque lacus pharetra.</p>
-                    <p>ik houd van motten in mn oude jas. Donec porta erat et mauris suscipit, at pellentesque lacus pharetra.</p>
+                    <p>
+                        Ik heb mijn patisserie opleiding gedaan in beverwijk. Eerst een jaar basispatisserie en daarna de "next level" opleiding.
+                        Deze laatste opleidign wordt gegeven door Jeroen Goossens, de huispatissier van het koninklijk huis.
+                        Hier heb ik enorm veel geleerd.
+                    </p>
+                    <p>
+                        Als zelfstandig ondernemer heb ik een catering bedrijf gehad. Dit as een broodjes bezorg service.
+                        Het runnen van mijn eigen bedrijf heeft mij ook enorm veel ervaring opgeleverd.
+                    </p>
+                    <p>
+                        ik ben verder een enorme natuur liefhebber en heb sinds kort zelf een collectie zeldzame rupsen.
+                        Deze transformeren zichzelf tot prachige vlinders. Vergelijkbaar met het dssert wat je op deze pagina kan bewonderen.
+                    </p>
                 </div>
             </div> 
         </div>
