Fixed contact info layout. Corrected mail link to display subject correctly.

--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
                     Dekkerstraat 31<br>
                     1944VA Beverwijk<br>
                     kvk 60639393<br>
-                    <a class="email" href="mailto:kim@nomnivore.nlsubject=Contact met freelance kok Kim">kim@nomnivore.nl</a><br>
+                    <a class="email" href="mailto:kim@nomnivore.nl?subject=Contact met freelance kok Kim">kim@nomnivore.nl</a><br>
                     <a class="phone-number" href="tel:0640168572"> Tel: 06 - 40168572</a><br>
                 </p>
             </div>
