Made spelling corrections.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container-fluid hero-image">
         <div class="row align-items-center">
             <div class="col">
-                <h1 class="hero-text">Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Pattisier</h1>
+                <h1 class="hero-text">Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Patissier</h1>
                 <div class="profile-pic"></div>
             </div>
         </div>
@@ -60,11 +60,13 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-md-8 welcome-text">
-                <h2 class="text-center">Uw freelance kok is slechts één klik verwijdert</h2>
-                <p>
+                <h2 class="text-center">Uw freelance kok is slechts één klik verwijderd</h2>
+                <p class="text-center">
                     Ik ben Kimberly van Leeuwen, (N)omnivore in hart en nieren. 
-                    Als Freelance chef en pattisier ga ik graag in uw bedrijf aan de slag. 
-                    Voor het ontwikkelen van nieuwe producten, het draaien van partijen of het geven van cursussen.
+                    Als Freelance chef en patissier ga ik graag in uw bedrijf aan de slag. 
+                    Voor het ontwikkelen van nieuwe producten, het draaien van partijen of uw team te versterken.
+                    <br><br>
+                    Opdrachtgevers over Kim:
                 </p>
             </div>
         </div>
@@ -78,11 +80,11 @@
                         <div class="col-2">
                         <div class="reference-logo-1"></div>
                         </div>
-                        <div class="col-10 reference-titel"><h1>Culinair centrum beverwijk</h1></div>
+                        <div class="col-10 reference-titel"><h1>Culinair Centrum Beverwijk</h1></div>
                     </div>
                     <div class="row">
-                        <div class="col-12 reference-text"><p>Het is altijd plezierig met kim te werken. Ze is proffesioneel, prettig in de omgang en past zich snel aan. 
-                        Een echte aanvulling aan het team. Wij kunnen iedereen aanraden om met Kim in zee te gaan.</p>
+                        <div class="col-12 reference-text"><p>"Het is altijd plezierig met Kim te werken. Ze is professioneel, prettig in de omgang en past zich snel aan. 
+                        Een echte aanvulling van het team. Wij kunnen iedereen aanraden om met Kim in zee te gaan."</p>
                         </div>
                     </div>
                 </div>
@@ -96,8 +98,8 @@
                         <div class="col-10 reference-titel"><h1>Jeroen Goossens</h1></div>
                     </div>
                     <div class="row">
-                        <div class="col-12 reference-text"><p>Ik stel altijd hoge eisen, aan mijn producten en mijn personeel.
-                        Met Kim hoef ik me over beide nooit zorgen te maken. Kim is een op en top professional die zeker een aanvulling aan uw team zal zijn.</p>
+                        <div class="col-12 reference-text"><p>"Ik stel altijd hoge eisen, aan mijn producten en mijn personeel.
+                        Met Kim hoef ik me over beide nooit zorgen te maken. Kim is een op en top professional die zeker een aanvulling op uw team zal zijn."</p>
                         </div>
                     </div>
                 </div>
