--- a/recepten.html
+++ b/recepten.html
@@ -42,8 +42,8 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
             <div class="col-12 recipe-text">
-                <h1>Hier vindt je de lekkerste recepten van Nomnivore.</h1>
-                <p>Als freelance kok en pattisier deel ik graag mijn kennis. Wil je ook zulke lekkere patisserie maken of op de zaak verkopen? 
+                <h1>Hier vind je de lekkerste recepten van Nomnivore.</h1>
+                <p>Als freelance kok en patissier deel ik graag mijn kennis. Wil je ook zulke lekkere patisserie maken of op de zaak verkopen? 
                 Neem contact met me op of probeer het zelf. Hier vindt je regelmatig nieuwe recepten dus ik zie je graag hier terug!</p>
             </div>
         </div>
@@ -133,7 +133,7 @@
             <div class="col-md-12 recipe-section">
                 <div class="col-md-12">
                 <div class="row">
-                    <div class="col"><h2 class="recipe-title">Verjaardags taart</h2><hr></div>
+                    <div class="col"><h2 class="recipe-title">Verjaardags-taart</h2><hr></div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
@@ -185,7 +185,7 @@
                                         Als de taart is afgekoeld maak je de topping. Doe slagroom, vanillesuiker en mascarpone in een kom en mix tot een stevige gladde room.<br><br>
                                     </li>
                                     <li>
-                                        Masceer de cake met de room en decoreer met het rode fruit.
+                                        Maskeer de cake met de room en decoreer met het rode fruit.
                                     </li>
                                 </ol>
                             </div>
@@ -260,7 +260,6 @@
             </div>
             </div>
         </div>
-    </div>
 </section>
 <!-- footer section -->
 <footer class="container-fluid fixed-bottom">
