--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                 <input type="email" id="email" name="email"><br>
                 <label for="name">Korte omschrijving van uw vraag.</label><br>
                 <textarea id="message" name="message"></textarea><br><br>
-                <input type="submit" value="Send" class="send-button">
+                <input type="submit" value="verzenden" class="send-button">
             </form>
             </div>
         </div>
