Added required to contact form. moved readme images to seperate folder. Final adjustments to testing and readme files.

--- a/contact.html
+++ b/contact.html
@@ -92,11 +92,11 @@
             <div class="col-12 contact-form">
             <form>
                 <label for="name">Uw naam:</label><br>
-                <input type="text" id="fname" name="fname"><br>
+                <input type="text" id="fname" name="fname"  required><br>
                 <label for="lname">Uw email:</label><br>
-                <input type="email" id="email" name="email"><br>
+                <input type="email" id="email" name="email"  required><br>
                 <label for="name">Korte omschrijving van uw vraag.</label><br>
-                <textarea id="message" name="message"></textarea><br><br>
+                <textarea id="message" name="message"  required></textarea><br><br>
                 <input type="submit" value="verzenden" class="send-button">
             </form>
             </div>
